--- a/src/components/LocationCell.module.css
+++ b/src/components/LocationCell.module.css
@@ -14,6 +14,8 @@
   font-family: inherit;
   color: #fff;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+  user-select: none;
+  -webkit-user-select: none;
 }
 
 .cell:hover {
